--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
     <link rel="icon" type="image/x-icon" href="./assets/images/mackIcon/M_vermelho.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="http://www.cloudformatter.com/Resources/Pages/CSS2Pdf/Script/xepOnline.jqPlugin.js"></script>
+
+
 </head>
 
 <body>
